Updated delay before checking clipboard